All Paths From Source to Target: Checked if a vertex's neighbours are unvisited and executed dfs on these neighbours for improved performance (Runtime: 2ms -> 1ms; Rank: 71.50% -> 100%)